# oop-analyzer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  boolean_flag_example.py  coupling_example.py  dictionary_usage_example.py  encapsulation_example.py  functions_to_objects_example.py  null_object_example.py  polymorphism_example.py  reference_exposure_example.py  type_code_example.py
oop_analyzer/: __init__.py  analyzer.py  cli.py  config.py  safety.py
oop_analyzer/formatters/: __init__.py  base.py  html_formatter.py  json_formatter.py  xml_formatter.py
oop_analyzer/rules/: __init__.py  base.py  boolean_flag.py  coupling.py  dictionary_usage.py  encapsulation.py  functions_to_objects.py  null_object.py  polymorphism.py  reference_exposure.py  type_code.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_formatters.py  test_safety.py
tests/test_rules/: __init__.py  test_boolean_flag.py  test_coupling.py  test_dictionary_usage.py  test_encapsulation.py  test_functions_to_objects.py  test_null_object.py  test_polymorphism.py  test_reference_exposure.py  test_type_code.py
